# fantasy_football

./: .gitignore  README.md  main.py  pyproject.toml
fantasy_football/: constants.py  data_extraction.py
